ajuste iniciar proyecto

--- a/src/index.html
+++ b/src/index.html
@@ -31,4 +31,13 @@
 <script src="assets/js/vendors/plugins/select2.init.js"></script>
 <script src="assets/js/layout/app.js"></script>
 <!--<script src="assets/js/custom/authentication/free-trial.js"></script>-->
+
+		<!--begin::Page Vendors Javascript(used by this page)-->
+		<script src="assets/plugins/custom/fslightbox/fslightbox.bundle.js"></script>
+		<script src="assets/plugins/custom/typedjs/typedjs.bundle.js"></script>
+		<!--end::Page Vendors Javascript-->
+		<!--begin::Page Custom Javascript(used by this page)-->
+		<script src="assets/js/custom/landing.js"></script>
+		<script src="assets/js/custom/pages/pricing/general.js"></script>
+		<!--end::Page Custom Javascript-->
 </html>
