--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,25 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
 </head>
 <body root id="kt_body" class="mat-typography">
+  <script>
+    if (document.documentElement) {
+      var defaultThemeMode = "system";
+
+      var hasKTName = document.body.hasAttribute("data-kt-name");
+      var lsKey = "kt_" + (hasKTName ? name + "_" : "") + "theme_mode_value"
+      var themeMode = localStorage.getItem(lsKey);
+      if (!themeMode) {
+        if (defaultThemeMode === "system") {
+          themeMode =
+            window.matchMedia("(prefers-color-scheme: dark)").matches ? "dark" : "light";
+        } else {
+          themeMode = defaultThemeMode;
+        }
+      }
+
+      document.documentElement.setAttribute("data-theme", themeMode);
+    }
+  </script>
 <div id="splash-screen" class="splash-screen">
   <img src="./assets/media/logos/logo-1.svg" alt="Metronic logo"/>
   <span>Loading ...</span>
