limite texto categorizacion

--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
 </head>
 <body root id="kt_body" class="mat-typography">
+  
   <script>
     if (document.documentElement) {
       var defaultThemeMode = "system";
@@ -59,4 +60,6 @@
 		<script src="assets/js/custom/landing.js"></script>
 		<script src="assets/js/custom/pages/pricing/general.js"></script>
 		<!--end::Page Custom Javascript-->
+    <script src="https://unpkg.com/maxlength-contenteditable@1.0.1/dist/maxlength-contenteditable.js"></script>
+    <script src="assets/js/custom/script.js"></script>
 </html>
