--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
     }
   </script>
 <div id="splash-screen" class="splash-screen">
-  <img src="./assets/media/logos/logo-1.svg" alt="Metronic logo"/>
+  <img src="./assets/media/logos/Logo_mbipi.png" alt="Mbipi logo"/>
   <span>Loading ...</span>
 </div>
 </body>
