--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
   </script>
 <div id="splash-screen" class="splash-screen">
   <img src="./assets/media/logos/Logo_mbipi.png" alt="Mbipi logo"/>
-  <span>Loading ...</span>
+  <span>Espere por favor ...</span>
 </div>
 </body>
 
